--- a/404.md
+++ b/404.md
@@ -5,9 +5,9 @@ permalink: /404.html
 
 # 404
 
-Sorry, we can't seem to find this page's pixylls.
+抱歉，我们找不到页面了。
 
 <div class="mt3">
-  <a href="{{ site.baseurl }}/" class="button button-blue button-big">Home</a>
-  <a href="{{ site.baseurl }}/contact/" class="button button-blue button-big">Contact</a>
+  <a href="{{ site.baseurl }}/" class="button button-blue button-big">主页</a>
+  <a href="{{ site.baseurl }}/about/" class="button button-blue button-big">联系我们</a>
 </div>
